added back-to-top functionality

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </head>
     <body>
     <!--IMAGE CAROUSEL-->
+    <div class="container">
       <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
@@ -81,5 +82,7 @@
           </p>
         </article>
       </section>
+      <a href="#content"><div>Button</div></a>
+    </div>
     </body>
 </html>
